--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,14 @@
 {
   "development": {
     "username": "postgres",
-    "password": "indra123",
+    "password": "vennela123",
     "database": "todo_dev",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": "indra123",
+    "password": "vennela123",
     "database": "todo_db_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
